@startuml CLASSES_SERVICE_STAY
title "Diagramme de classes — stay-service"
skinparam classAttributeIconSize 0

class StayController {
  - stayService : StayService
  + open(request) : StayResponse
  + close(id, request) : StayResponse
  + updateHospitalizationForm(admissionId, request) : HospitalizationFormResponse
}
class StayService {
  - stayRepository : StayRepository
  - hospitalizationFormRepository : HospitalizationFormRepository
  - patientServiceClient : PatientServiceClient
  - careEntryServiceClient : CareEntryServiceClient
  + open(request, authHeader) : StayResponse
  + close(stayId, request, authHeader) : StayResponse
  + updateForm(admissionId, request) : HospitalizationFormResponse
}
class Stay {
  - patientId : Long
  - admissionId : Long
  - status : StayStatus
  - roomLabel : String
  - bedLabel : String
}
class HospitalizationForm {
  - chiefComplaint : String
  - historyText : String
  - allergies : String
}

StayController --> StayService
StayService --> Stay
StayService --> HospitalizationForm
Stay "1" *-- "0..1" HospitalizationForm

@enduml
